--- a/conjugverbos/Base.lproj/Localizable.strings
+++ b/conjugverbos/Base.lproj/Localizable.strings
@@ -5,9 +5,9 @@
   Created by Peterson Guimarães Luciano on 11/29/13.
   Copyright (c) 2013 Peterson Guimarães Luciano. All rights reserved.
 */
-
-"TITULO_VERBO" = "Conjugação do verbo";
-"TITLE_VERBOS" = "Selecione um Verbo";
-"TITLE_ABOUT"  = "Sobre";
-"TITLE_CLASSIFIQUE" = "Classifique";
-"LABLE_BUSCAR_NA_LETRA" = "Buscar na letra ";
+"TITULO_VERBO" = "Verb Conjugation";
+"TITLE_VERBOS" = "Select a verb";
+"TITLE_ABOUT"  = "About";
+"TITLE_CLASSIFIQUE" = "Rate";
+"LABLE_BUSCAR_NA_LETRA" = "Search on ";
+"LABLE_BUSCAR_TODOS_VERBOS" = "Search on all verbs";
