--- a/conjugverbos/en.lproj/Localizable.strings
+++ b/conjugverbos/en.lproj/Localizable.strings
@@ -10,3 +10,4 @@
 "TITLE_ABOUT"  = "About";
 "TITLE_CLASSIFIQUE" = "Rate";
 "LABLE_BUSCAR_NA_LETRA" = "Search on ";
+"LABLE_BUSCAR_TODOS_VERBOS" = "Search on all verbs";
